# ViT

src/: README.md
src/vit/datasets/: datasets.py
src/vit/models/: attentionBlock.py  createPatches.py  vit.py
src/vit/scripts/: script_brain.py  train_cifar.py
src/vit/trainers/: trainer_brain.py
src/vit/utils/: utils.py
vit/: README.md  pyproject.toml
vit/vit/models/: CreatePatches.py  attentionBlock.py  vit.py
