[tool.poetry]
name = "vit"
version = "0.1.0"
description = ""
authors = ["Robin Ghyselinck <rghyselinck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = "*"
wandb = "*"
torch = "*"
torchvision = "*"
scikit-learn = "*"
seaborn = "*"
tqdm = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
